--- a/inventories/cleversite-staging.yml
+++ b/inventories/cleversite-staging.yml
@@ -17,9 +17,25 @@ all:
         app_version_name: master-12345
         app_release_commit: 4a1760afa75dabf5f03c3b4bf4343c8d0cbcc1a7
         app_path: "{{app_basepath}}/{{app_version_name}}"
-        app_current_release_path: "{{app_basepath}}/current"
+        app_current_release_path: "/var/www/cleversite"
         app_backup_release_path: "{{app_basepath}}/backup"
         app_domain: web.cleversite.staging.local
+        app_data_path: "{{app_basepath}}/data"
+        app_external_data:
+          - src: download
+            dest: download
+          - src: exchange
+            dest: exchange
+          - src: exchange_archive
+            dest: exchange_archive
+          - src: pays
+            dest: pays
+          - src: users
+            dest: cleversite/user
+          - src: ipts
+            dest: callback/wav
+          - src: upload
+            dest: upload
       hosts:
         cs-test-lb01.servicecloud.info: {}
 
