--- a/roles/cleversite/web/tasks/deploy-app.yaml
+++ b/roles/cleversite/web/tasks/deploy-app.yaml
@@ -11,6 +11,38 @@
     repo: "{{app_git_repo}}"
     dest: "{{app_path}}"
     version: "{{app_release_commit}}"
+    force: yes
+
+- name: Prepare app. Remove directories
+  file:
+    state: absent
+    path: "{{app_path}}/{{item}}"
+  with_items:
+    - upload
+
+- name: Link with external data
+  file:
+    src: "{{app_data_path}}/{{item.src}}"
+    dest: "{{app_path}}/{{item.dest}}"
+    state: link
+    owner: nginx
+    group: nginx
+    force: yes
+  with_items:
+    - src: download
+      dest: download
+    - src: exchange
+      dest: exchange
+    - src: exchange_archive
+      dest: exchange_archive
+    - src: pays
+      dest: pays
+    - src: users
+      dest: cleversite/user
+    - src: ipts
+      dest: callback/wav
+    - src: upload
+      dest: upload
 
 - debug:
     msg: "Deploy to {{app_domain}}"
@@ -33,7 +65,7 @@
     msg: "{{current_stat}}"
 
 - name: Backup current release
-  when: current_stat.stat.lnk_target == app_path
+  when: current_stat.stat.exists == True and current_stat.stat.lnk_target != app_path
   shell: "cp -P {{app_current_release_path}} {{app_backup_release_path}}"
 
 
