Выкатка codes и static

--- a/files/staging.env
+++ b/files/staging.env
@@ -2,7 +2,47 @@ DB_HOST='cs-mysql-node01.servicecloud.info'
 DB_LOGIN='cleversite'
 DB_PASSWORD='cleversite'
 DB_NAME='cleversite'
-JABBER_HOST='cs-jabber01.servicecloud.info'
-MEMCACHED_HOST='cs-web01.servicecloud.info:11211'
+
+
+# DOMEN SETUP
 DOMEN='cleversite.ru'
-STATICDOMEN="static.cleversite.ru"
+APIDOMEN='api.cleversite.ru'
+STATICDOMEN="static01.cleversite.ru"
+PULTDOMEN="nodejs01.cleversite.ru"
+WSDOMEN="lb02.cleversite.ru"
+WSDOMEN2="lb02.cleversite.ru"
+SOCKETDOMEN="lb02.cleversite.ru"
+SOCKETDOMENURL="https://lb02.cleversite.ru/echo"
+CLIENTDOMEN="cleversite.ru"
+ATSDOMEN="call.cleversite.ru"
+RELEASEDOMEN="release.cleversite.ru"
+CHATAPIDOMEN="chat-api.cleversite.ru"
+CODESDOMEN="codes.cleversite.ru"
+FILEDOMEN="cleversite.ru"
+CALLBACKDOMEN="clients.cleversite.ru"
+CALLBACK_INTERNAL_DOMEN="cs-clients01.servicecloud.info"
+SERVERDOMEN="cleversite.ru"
+MEMCACHED_HOST="cs-web01.servicecloud.info:11211"
+
+# JABBER SETUP
+JABBER_HOST='cs-jabber01.servicecloud.info'
+RPC_HOST="cs-jabber01.servicecloud.info"
+RPC_DOMEN="cleversite.ru"
+RPC_PORT=4560
+RPC_PATH='/RPC2'
+RPC_AUTH_USER='admin'
+RPC_AUTH_PASSWORD='8Anzpv4'
+RPC_AUTH_SERVER="cs-jabber01.servicecloud.info"
+JABBER_RESOURCE='NodeJSClient'
+
+# NODEJS SERVERS
+#CODES
+CODES_PORT=6001
+CODES_WORKERS=12
+#WS
+WS_PORT=6030
+WS_WORKERS=12
+#PULT
+PULT_PORT=3000
+
+BASIC_AUTH="clever-123jh123lzxlcgjxclv"
