Выкатка .env файла для WEB и API

--- a/roles/cleversite/api/tasks/deploy-app.yaml
+++ b/roles/cleversite/api/tasks/deploy-app.yaml
@@ -13,6 +13,10 @@
     version: "{{app_release_commit}}"
     force: yes
 
+- name: Add envfile
+  copy:
+    dest: "{{app_basepath}}/.env"
+    src: "{{envfile}}"
 
 
 - stat:
