Поправил домен для статики

--- a/files/staging.env
+++ b/files/staging.env
@@ -7,7 +7,7 @@ DB_NAME='cleversite'
 # DOMEN SETUP
 DOMEN='cleversite.ru'
 APIDOMEN='api.cleversite.ru'
-STATICDOMEN="static01.cleversite.ru"
+STATICDOMEN="static.cleversite.staging.local"
 PULTDOMEN="nodejs01.cleversite.ru"
 WSDOMEN="lb02.cleversite.ru"
 WSDOMEN2="lb02.cleversite.ru"
