--- a/files/staging.env
+++ b/files/staging.env
@@ -5,10 +5,10 @@ DB_NAME='cleversite'
 
 
 # DOMEN SETUP
-DOMEN='cleversite.ru'
-APIDOMEN='api.cleversite.ru'
+DOMEN='cleversite.staging.local'
+APIDOMEN='api.cleversite.staging.local'
 STATICDOMEN="static.cleversite.staging.local"
-PULTDOMEN="nodejs01.cleversite.ru"
+PULTDOMEN="pult.cleversite.staging.local"
 WSDOMEN="lb02.cleversite.ru"
 WSDOMEN2="lb02.cleversite.ru"
 SOCKETDOMEN="lb02.cleversite.ru"
@@ -17,7 +17,7 @@ CLIENTDOMEN="cleversite.ru"
 ATSDOMEN="call.cleversite.ru"
 RELEASEDOMEN="release.cleversite.ru"
 CHATAPIDOMEN="chat-api.cleversite.ru"
-CODESDOMEN="codes.cleversite.ru"
+CODESDOMEN="codes.cleversite.staging.local"
 FILEDOMEN="cleversite.ru"
 CALLBACKDOMEN="clients.cleversite.ru"
 CALLBACK_INTERNAL_DOMEN="cs-clients01.servicecloud.info"
