Изменил настройки для стейджа

--- a/files/staging.env
+++ b/files/staging.env
@@ -1,7 +1,7 @@
-DB_HOST='cs-mysql-node01.servicecloud.info'
-DB_LOGIN='cleversite'
-DB_PASSWORD='cleversite'
-DB_NAME='cleversite'
+DB_HOST='cs-test-lb01.servicecloud.info'
+DB_LOGIN='cleversite_app'
+DB_PASSWORD='cleversiteapp'
+DB_NAME='cleversite_staging'
 
 
 # DOMEN SETUP
@@ -13,26 +13,26 @@ WSDOMEN="lb02.cleversite.ru"
 WSDOMEN2="lb02.cleversite.ru"
 SOCKETDOMEN="lb02.cleversite.ru"
 SOCKETDOMENURL="https://lb02.cleversite.ru/echo"
-CLIENTDOMEN="cleversite.ru"
-ATSDOMEN="call.cleversite.ru"
-RELEASEDOMEN="release.cleversite.ru"
-CHATAPIDOMEN="chat-api.cleversite.ru"
+CLIENTDOMEN="cleversite.staging.local"
+ATSDOMEN="call.cleversite.staging.local"
+RELEASEDOMEN="release.cleversite.staging.local"
+CHATAPIDOMEN="chat-api.cleversite.staging.local"
 CODESDOMEN="codes.cleversite.staging.local"
-FILEDOMEN="cleversite.ru"
-CALLBACKDOMEN="clients.cleversite.ru"
+FILEDOMEN="cleversite.staging.local"
+CALLBACKDOMEN="clients.cleversite.staging.local"
 CALLBACK_INTERNAL_DOMEN="cs-clients01.servicecloud.info"
-SERVERDOMEN="cleversite.ru"
+SERVERDOMEN="cleversite.staging.local"
 MEMCACHED_HOST="cs-web01.servicecloud.info:11211"
 
 # JABBER SETUP
-JABBER_HOST='cs-jabber01.servicecloud.info'
-RPC_HOST="cs-jabber01.servicecloud.info"
-RPC_DOMEN="cleversite.ru"
+JABBER_HOST='cs-test-lb01.servicecloud.info'
+RPC_HOST="cs-test-lb01.servicecloud.info"
+RPC_DOMEN="localhost"
 RPC_PORT=4560
 RPC_PATH='/RPC2'
 RPC_AUTH_USER='admin'
 RPC_AUTH_PASSWORD='8Anzpv4'
-RPC_AUTH_SERVER="cs-jabber01.servicecloud.info"
+RPC_AUTH_SERVER="cs-test-lb01.servicecloud.info"
 JABBER_RESOURCE='NodeJSClient'
 
 # NODEJS SERVERS
