Установил настройки для стейджа

--- a/files/staging.env
+++ b/files/staging.env
@@ -9,10 +9,10 @@ DOMEN='cleversite.staging.local'
 APIDOMEN='api.cleversite.staging.local'
 STATICDOMEN="static.cleversite.staging.local"
 PULTDOMEN="pult.cleversite.staging.local"
-WSDOMEN="lb02.cleversite.ru"
-WSDOMEN2="lb02.cleversite.ru"
-SOCKETDOMEN="lb02.cleversite.ru"
-SOCKETDOMENURL="https://lb02.cleversite.ru/echo"
+WSDOMEN="ws.cleversite.staging.local"
+WSDOMEN2="ws.cleversite.staging.local"
+SOCKETDOMEN="ws.cleversite.staging.local"
+SOCKETDOMENURL="http://ws.cleversite.staging.local/echo"
 CLIENTDOMEN="cleversite.staging.local"
 ATSDOMEN="call.cleversite.staging.local"
 RELEASEDOMEN="release.cleversite.staging.local"
