Токены для reCaptcha

--- a/files/staging.env
+++ b/files/staging.env
@@ -46,3 +46,7 @@ WS_WORKERS=12
 PULT_PORT=3000
 
 BASIC_AUTH="clever-123jh123lzxlcgjxclv"
+
+
+CAPTCHA_SITE_KEY='6LcAwuEZAAAAAL20DGIh40LL4FOk3R9JO8v7e18K'
+CAPTCHA_SECRET='6LcAwuEZAAAAANvdbZpEPBiIRKz7jClo3GPdonsC'
