Рестарт php при выкатке шаблона

--- a/roles/cleversite/website-template/tasks/main.yaml
+++ b/roles/cleversite/website-template/tasks/main.yaml
@@ -25,3 +25,8 @@
     state: link
     owner: apache
     group: apache
+
+- name: Рестартую phpfpm
+  systemd:
+    name: "php-fpm"
+    state: restarted
