--- a/inventories/cleversite-prod.yml
+++ b/inventories/cleversite-prod.yml
@@ -13,6 +13,7 @@ all:
       vars:
         git_user: deploy_user
         git_token: f-BLVAb9Dun5pkAVQiSj
+        phpfpm_fcgi_socket: /var/run/php-fpm/php-fpm-www.sock
         app_git_repo: "https://{{git_user}}:{{git_token}}@gitlab.servicecloud.info/cleversite/web.git"
         app_basepath: /var/www/app/web
         app_version_name: manual-deploy
