Reset opcachec for web deploy

--- a/roles/cleversite/web/tasks/deploy-app.yaml
+++ b/roles/cleversite/web/tasks/deploy-app.yaml
@@ -93,7 +93,6 @@
     owner: nginx
     group: nginx
 
-- name: Рестартую phpfpm
-  systemd:
-    name: "php-fpm"
-    state: restarted
+
+- name: Сбрасываю OpCache
+  import_tasks: tasks/webserver/php-resetopcache.yml
