--- a/roles/cleversite/web/tasks/deploy-app.yaml
+++ b/roles/cleversite/web/tasks/deploy-app.yaml
@@ -30,6 +30,30 @@
   with_items:
     - upload
     - docker
+
+- name: Проверяю внешние папки
+  file:
+    path: "{{app_data_path}}/{{item.src}}"
+    state: directory
+    mode: "0777"
+    owner: nginx
+    group: nginx
+    force: yes
+  with_items:
+    - src: download
+      dest: download
+    - src: exchange
+      dest: exchange
+    - src: exchange_archive
+      dest: exchange_archive
+    - src: pays
+      dest: pays
+    - src: users
+      dest: cleversite/user
+    - src: ipts
+      dest: callback/wav
+    - src: upload
+      dest: upload
 - name: Подключаю внешние папки
   file:
     src: "{{app_data_path}}/{{item.src}}"
@@ -61,6 +85,12 @@
 
 - debug:
     msg: "Deploy to {{app_domain}}"
+
+- name: Создаю папки для логов NGINX
+  file:
+    path: /var/log/nginx/cleversite
+    state: directory
+    mode: "0777"
 
 - name: Обновляю конфиг NGINX
   template:
