--- a/files/testing.env
+++ b/files/testing.env
@@ -1,8 +1,12 @@
+# DB CONNECTION
 DB_HOST='cs-testing01.servicecloud.info'
 DB_LOGIN='cleversite_app'
 DB_PASSWORD='cleversiteapp'
+DB_ADMIN_LOGIN='cleversite_app'
+DB_ADMIN_PASSWORD='cleversiteapp'
 DB_NAME='cleversite_testing'
-
+DB_READ_PORT=3306
+DB_WRITE_PORT=3306
 
 # DOMEN SETUP
 DOMEN='cleversite.testing.local'
@@ -22,7 +26,9 @@ FILEDOMEN="cleversite.testing.local"
 CALLBACKDOMEN="clients.cleversite.testing.local"
 CALLBACK_INTERNAL_DOMEN="cs-clients01.servicecloud.info"
 SERVERDOMEN="cleversite.testing.local"
-MEMCACHED_HOST="cs-web01.servicecloud.info:11211"
+MEMCACHED_HOST="cs-testing01.servicecloud.info:11211"
+API_CORS_DOMAINS="personal.cleversite.testing.local,lk.cleversite.testing.local"
+CABINET_DOMEN="personal.cleversite.testing.local"
 
 # JABBER SETUP
 JABBER_HOST='cs-testing01.servicecloud.info'
@@ -48,5 +54,18 @@ PULT_PORT=3000
 BASIC_AUTH="clever-123jh123lzxlcgjxclv"
 
 
-CAPTCHA_SITE_KEY='6LcAwuEZAAAAAL20DGIh40LL4FOk3R9JO8v7e18K'
-CAPTCHA_SECRET='6LcAwuEZAAAAANvdbZpEPBiIRKz7jClo3GPdonsC'
+# CAPTCHA
+CAPTCHA_ENABLED=false
+CAPTCHA_SECRET_KEY="6Lc5wAwbAAAAAAUaFKXsMnggNTNYX6QnC8vl_6kk"
+
+# UTILS
+ASSIGNEE_EMAIL='mi.frolov@it-tula.ru'
+
+# S3 deploy desktop app
+S3_HOST='s3-node01.scloud.ru'
+S3_REPO_NAME='cleversite-pult-releases'
+
+#1C UTM
+SERVER_1C_HOST='https://srv1c.tula.scloud.ru:9494/us_sc/hs/CleversiteExchange/UTMMetrics'
+SERVER_1C_LOGIN='1c_web_services'
+SERVER_1C_PASSWORD='j6ByyPRaHl9x8kslXi8R'
