--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,5 +17,6 @@ publish:
   only:
     - master
   script:
+    - docker pull $DOCKERHUB/cleversite-deploy:$CI_COMMIT_REF_SLUG-$CI_PIPELINE_ID
     - docker tag $DOCKERHUB/cleversite-deploy:$CI_COMMIT_REF_SLUG-$CI_PIPELINE_ID $DOCKERHUB/cleversite-deploy:latest
     - docker push $DOCKERHUB/cleversite-deploy:latest
