--- a/inventories/cleversite-staging.yml
+++ b/inventories/cleversite-staging.yml
@@ -6,8 +6,10 @@ all:
     ansible_ssh_private_key_file: keys/ansible_user
     ansible_connection: ssh
     ansible_become_method: sudo
-    envfile: staging.env
+    envfile: testing.env
     node_env: production
+    docker_version: 20.10.6
+    docker_compose: yes
   children:
     cleversite_codes:
       vars:
@@ -56,9 +58,9 @@ all:
       hosts:
         ws-staging:
           ansible_ssh_host: cs-test-lb01.servicecloud.info
+          is_balancer: True
           app_ports:
-            from: 6001
-            to: 6005
+            - 6012       
 
 
     cleversite_pult:
@@ -89,7 +91,7 @@ all:
         app_path: "{{app_basepath}}/{{app_version_name}}"
         app_current_release_path: "/var/www/cleversite"
         app_backup_release_path: "{{app_basepath}}/backup"
-        app_domain: web.cleversite.staging.local
+        app_domain: cleversite.staging.local
         app_data_path: "{{app_basepath}}/data"
         app_external_data:
           - src: download
@@ -109,6 +111,7 @@ all:
         webtemplate:
           app_basepath: /var/www/app/web-template
           app_path: "/var/www/app/web-template/{{app_release_name}}"
+          app_current_link: "/var/www/app/web-template/current"
           app_current_release_path: "/var/www/cleversite/bitrix/templates/{{template_name}}"
           
       hosts:
