--- a/roles/cleversite/website-template/tasks/main.yaml
+++ b/roles/cleversite/website-template/tasks/main.yaml
@@ -17,6 +17,13 @@
       - "--exclude=.git"
       - "--exclude=node_modules"
 
+- name: Создаю ссылку на новый релиз
+  file:
+    src: "{{webtemplate.app_path}}"
+    dest: "{{webtemplate.app_current_link}}"
+    state: link
+    owner: apache
+    group: apache
 
 - name: Активирую новый релиз
   file:
