--- a/files/staging.env
+++ b/files/staging.env
@@ -23,6 +23,7 @@ CALLBACKDOMEN="clients.cleversite.staging.local"
 CALLBACK_INTERNAL_DOMEN="cs-clients01.servicecloud.info"
 SERVERDOMEN="cleversite.staging.local"
 MEMCACHED_HOST="cs-web01.servicecloud.info:11211"
+API_CORS_DOMAINS="personal.cleversite.staging.local,lk.cleversite.staging.local"
 
 # JABBER SETUP
 JABBER_HOST='cs-test-lb01.servicecloud.info'
@@ -48,5 +49,25 @@ PULT_PORT=3000
 BASIC_AUTH="clever-123jh123lzxlcgjxclv"
 
 
+CAPTCHA_ENABLED=true
+CAPTCHA_SECRET_KEY="6Lc5wAwbAAAAAAUaFKXsMnggNTNYX6QnC8vl_6kk"
 CAPTCHA_SITE_KEY='6LcAwuEZAAAAAL20DGIh40LL4FOk3R9JO8v7e18K'
 CAPTCHA_SECRET='6LcAwuEZAAAAANvdbZpEPBiIRKz7jClo3GPdonsC'
+
+# UTILS
+ASSIGNEE_EMAIL='mi.frolov@it-tula.ru'
+
+# S3 deploy desktop app
+S3_HOST='s3-node01.scloud.ru'
+S3_REPO_NAME='cleversite-pult-releases'
+
+
+#1C UTM
+SERVER_1C_HOST='https://srv1c.tula.scloud.ru:9494/us_sc/hs/CleversiteExchange/UTMMetrics'
+SERVER_1C_LOGIN='1c_web_services'
+SERVER_1C_PASSWORD='j6ByyPRaHl9x8kslXi8R'
+
+#AMOCRM
+AMO_CRM_SUBDOMAIN='echernyatev'
+AMO_CRM_SEND_ENABLE='true'
+
