--- a/inventories/cleversite-staging.yml
+++ b/inventories/cleversite-staging.yml
@@ -6,7 +6,7 @@ all:
     ansible_ssh_private_key_file: keys/ansible_user
     ansible_connection: ssh
     ansible_become_method: sudo
-    envfile: testing.env
+    envfile: staging.env
     node_env: production
     docker_version: 20.10.6
     docker_compose: yes
