Fix stage memcahed host

--- a/files/staging.env
+++ b/files/staging.env
@@ -22,7 +22,7 @@ FILEDOMEN="cleversite.staging.local"
 CALLBACKDOMEN="clients.cleversite.staging.local"
 CALLBACK_INTERNAL_DOMEN="cs-clients01.servicecloud.info"
 SERVERDOMEN="cleversite.staging.local"
-MEMCACHED_HOST="cs-web01.servicecloud.info:11211"
+MEMCACHED_HOST="cs-test-lb01.servicecloud.info:11211"
 API_CORS_DOMAINS="personal.cleversite.staging.local,lk.cleversite.staging.local"
 
 # JABBER SETUP
