--- a/roles/cleversite/web/tasks/main.yaml
+++ b/roles/cleversite/web/tasks/main.yaml
@@ -1,4 +1,13 @@
+# Выкатываем релиз
 - import_tasks: deploy-app.yaml
   when: task == "deploy"
+# Делаем бэкап
+- import_tasks: make-backup.yaml
+  when: task == "deploy"
+# Активируем релиз
+#- import_tasks: make-backup.yaml
+#  when: task == "deploy"
+
+
 - import_tasks: rollback-app.yaml
   when: task == "rollback"
