--- a/inventories/cleversite-prod.yml
+++ b/inventories/cleversite-prod.yml
@@ -17,30 +17,33 @@ all:
         app_git_repo: "https://{{git_user}}:{{git_token}}@gitlab.servicecloud.info/cleversite/web.git"
         app_basepath: /var/www/app/web
         app_version_name: manual-deploy
+        app_release_name: manual-deploy
         app_release_commit: master
         app_path: "{{app_basepath}}/{{app_version_name}}"
         app_current_release_path: "/var/www/cleversite"
         app_backup_release_path: "{{app_basepath}}/backup"
-        app_domain: web.cleversite.staging.local
-        app_data_path: "{{app_basepath}}/data"
+        app_domain: cleversite.ru
+        app_data_path: "/var/www/app/app-data"
+        app_template_dest: "{{app_path}}/bitrix/templates/cleversite_dec2020" 
         app_external_data:
-          - src: download
+          - src: "{{app_data_path}}/download"
             dest: download
-          - src: exchange
+          - src: "{{app_data_path}}/exchange"
             dest: exchange
-          - src: exchange_archive
+          - src: "{{app_data_path}}/exchange_archive"
             dest: exchange_archive
-          - src: pays
+          - src: /var/www/pays
             dest: pays
-          - src: users
+          - src: /var/www/user
             dest: cleversite/user
-          - src: ipts
+          - src: /var/www/ipts
             dest: callback/wav
-          - src: upload
+          - src: "{{app_data_path}}/upload"
             dest: upload
         webtemplate:
-          app_basepath: /var/www/app/web-template
+          app_basepath: /var/www/app/web-template          
           app_path: "/var/www/app/web-template/{{app_release_name}}"
+          app_active_release_path: "/var/www/app/web-template/current"
           app_current_release_path: "/var/www/cleversite/bitrix/templates/cleversite_dec2020"
           
       hosts:
