--- a/files/testing.env
+++ b/files/testing.env
@@ -7,7 +7,6 @@ DB_ADMIN_PASSWORD='cleversiteapp'
 DB_NAME='cleversite_testing'
 DB_READ_PORT=3306
 DB_WRITE_PORT=3306
-
 # DOMEN SETUP
 DOMEN='cleversite.testing.local'
 APIDOMEN='api.cleversite.testing.local'
@@ -29,7 +28,6 @@ SERVERDOMEN="cleversite.testing.local"
 MEMCACHED_HOST="cs-testing01.servicecloud.info:11211"
 API_CORS_DOMAINS="personal.cleversite.testing.local,lk.cleversite.testing.local"
 CABINET_DOMEN="personal.cleversite.testing.local"
-
 # JABBER SETUP
 JABBER_HOST='cs-testing01.servicecloud.info'
 RPC_HOST="cs-testing01.servicecloud.info"
@@ -40,7 +38,6 @@ RPC_AUTH_USER='admin'
 RPC_AUTH_PASSWORD='8Anzpv4'
 RPC_AUTH_SERVER="cs-testing01.servicecloud.info"
 JABBER_RESOURCE='NodeJSClient'
-
 # NODEJS SERVERS
 #CODES
 CODES_PORT=6001
@@ -50,22 +47,20 @@ WS_PORT=6030
 WS_WORKERS=12
 #PULT
 PULT_PORT=3000
-
 BASIC_AUTH="clever-123jh123lzxlcgjxclv"
-
-
 # CAPTCHA
 CAPTCHA_ENABLED=false
 CAPTCHA_SECRET_KEY="6Lc5wAwbAAAAAAUaFKXsMnggNTNYX6QnC8vl_6kk"
-
 # UTILS
 ASSIGNEE_EMAIL='mi.frolov@it-tula.ru'
-
 # S3 deploy desktop app
 S3_HOST='s3-node01.scloud.ru'
 S3_REPO_NAME='cleversite-pult-releases'
-
 #1C UTM
 SERVER_1C_HOST='https://srv1c.tula.scloud.ru:9494/us_sc/hs/CleversiteExchange/UTMMetrics'
-SERVER_1C_LOGIN='1c_web_services'
-SERVER_1C_PASSWORD='j6ByyPRaHl9x8kslXi8R'
+SERVER_1C_LOGIN=''
+SERVER_1C_PASSWORD=''
+
+#AMOCRM
+AMO_CRM_SUBDOMAIN='echernyatev'
+AMO_CRM_SEND_ENABLE='true'
