--- a/files/testing.env
+++ b/files/testing.env
@@ -28,6 +28,8 @@ SERVERDOMEN="cleversite.testing.local"
 MEMCACHED_HOST="cs-testing01.servicecloud.info:11211"
 API_CORS_DOMAINS="personal.cleversite.testing.local,lk.cleversite.testing.local"
 CABINET_DOMEN="personal.cleversite.testing.local"
+WIDGET_DOMEN="widget.cleversite.testing.local"
+
 # JABBER SETUP
 JABBER_HOST='cs-testing01.servicecloud.info'
 RPC_HOST="cs-testing01.servicecloud.info"
