Update env files

--- a/files/prod.env
+++ b/files/prod.env
@@ -28,6 +28,7 @@ SERVERDOMEN="cleversite.ru"
 MEMCACHED_HOST="cs-web01.servicecloud.info:11211"
 API_CORS_DOMAINS="personal.cleversite.ru,lk.cleversite.staging.local"
 CABINET_DOMEN="personal.cleversite.ru"
+WIDGET_DOMEN="widget.cleversite.ru"
 
 # JABBER SETUP
 JABBER_HOST='cs-jabber01.servicecloud.info'
