--- a/files/staging.env
+++ b/files/staging.env
@@ -24,6 +24,7 @@ CALLBACK_INTERNAL_DOMEN="cs-clients01.servicecloud.info"
 SERVERDOMEN="cleversite.staging.local"
 MEMCACHED_HOST="cs-test-lb01.servicecloud.info:11211"
 API_CORS_DOMAINS="personal.cleversite.staging.local,lk.cleversite.staging.local"
+WIDGET_DOMEN="widget.cleversite.staging.local"
 
 # JABBER SETUP
 JABBER_HOST='cs-test-lb01.servicecloud.info'
