Fix deploy to prod

--- a/inventories/cleversite-prod.yml
+++ b/inventories/cleversite-prod.yml
@@ -7,6 +7,8 @@ all:
     ansible_connection: ssh
     ansible_become_method: sudo
     envfile: prod.env
+    envfile_common: common.prod.env
+    envfile_local: .env.prod
     node_env: production
   children:    
     cleversite_web:
