Fix ENV RPC_DOMEN

--- a/files/staging.env
+++ b/files/staging.env
@@ -29,7 +29,7 @@ WIDGET_DOMEN="widget.cleversite.staging.local"
 # JABBER SETUP
 JABBER_HOST='cs-test-lb01.servicecloud.info'
 RPC_HOST="cs-test-lb01.servicecloud.info"
-RPC_DOMEN="localhost"
+RPC_DOMEN="cleversite.ru"
 RPC_PORT=4560
 RPC_PATH='/RPC2'
 RPC_AUTH_USER='admin'
