--- a/files/testing.env
+++ b/files/testing.env
@@ -33,7 +33,7 @@ WIDGET_DOMEN="widget.cleversite.testing.local"
 # JABBER SETUP
 JABBER_HOST='cs-testing01.servicecloud.info'
 RPC_HOST="cs-testing01.servicecloud.info"
-RPC_DOMEN="localhost"
+RPC_DOMEN="cleversite.ru"
 RPC_PORT=4560
 RPC_PATH='/RPC2'
 RPC_AUTH_USER='admin'
