--- a/inventories/cleversite-prod.yml
+++ b/inventories/cleversite-prod.yml
@@ -62,19 +62,19 @@ all:
         app_domain: cleversite.testing.local
         app_data_path: "/var/www/app/app-data-public"        
         app_external_data:
-          - src: "{{app_data_path}}/www/download"
+          - src: "{{app_data_path}}/download"
             dest: download
-          - src: "{{app_data_path}}/www/exchange"
+          - src: "{{app_data_path}}/exchange"
             dest: exchange
-          - src: "{{app_data_path}}/www/exchange_archive"
+          - src: "{{app_data_path}}/exchange_archive"
             dest: exchange_archive
-          - src: "{{app_data_path}}/www/pays"
+          - src: "{{app_data_path}}/pays"
             dest: pays
-          - src: "{{app_data_path}}/www/users"
+          - src: "{{app_data_path}}/users"
             dest: cleversite/user
-          - src: "{{app_data_path}}/www/ipts"
+          - src: "{{app_data_path}}/ipts"
             dest: callback/wav
-          - src: "{{app_data_path}}/www/upload"
+          - src: "{{app_data_path}}/upload"
             dest: upload                
         app_current_env_path: "{{app_basepath}}/.env"
         envfile_common: common-web-public.prod.env
