--- a/roles/cleversite/web-public/tasks/deploy-app.yaml
+++ b/roles/cleversite/web-public/tasks/deploy-app.yaml
@@ -63,11 +63,10 @@
 
 
 
-- name: Выкладываю .env файл из {{app_path}}/{{envfile_local}}
+- name: Выкладываю .env файл из {{envfile_local}}
   copy:
     dest: "{{app_basepath}}/{{app_release_name}}.env"
-    src: "{{app_path}}/{{envfile_local}}"
-    remote_src: yes
+    src: "{envfile_local}}"    
 
 
 - name: Дополняю envfile
